--- a/index.html
+++ b/index.html
@@ -1101,8 +1101,13 @@ function viewSales(){ if(!canTab('Sales')) return document.createElement('div');
     <label>Finance Company<input id="sale_finCo" placeholder="Finance company"></label>
     <label>Agreement #<input id="sale_agree" placeholder="Agreement #"></label>
     <label>Deliver To<input id="sale_deliver" placeholder="Name/address"></label>
+    <label>Keys<input id="sale_keys" placeholder="e.g. 2 keys"></label>
+    <label>MOT Expiry<input id="sale_mot" placeholder="e.g. 2025-11-30"></label>
+    <label>Service History<input id="sale_sh" placeholder="Full / Part / None"></label>
+    <label>Invoice # (optional)<input id="sale_invNo" placeholder="Leave blank for auto"></label>
     <button id="sale_add" class="primary">Record / Update</button>
   </div>
+
   <table class="table" style="margin-top:10px"><thead><tr><th>Date</th><th>Reg</th><th>Customer</th><th class="right">Price</th><th>Breakdown</th>${canProfit()?'<th class="right">Profit</th>':''}<th>Actions</th></tr></thead><tbody id="sale_body"></tbody></table>`;
   let editId=null; const body=wrap.querySelector('#sale_body');
   
@@ -1124,17 +1129,37 @@ function viewSales(){ if(!canTab('Sales')) return document.createElement('div');
       wrap.querySelector('#sale_phone').value=s.phone||''; wrap.querySelector('#sale_email').value=s.email||''; wrap.querySelector('#sale_mileage').value=s.mileage||0; wrap.querySelector('#sale_firstReg').value=s.firstReg||'';
       wrap.querySelector('#sale_price').value=s.salePrice||0; wrap.querySelector('#sale_dep').value=s.deposit||0; wrap.querySelector('#sale_cash').value=s.cash||0; wrap.querySelector('#sale_card').value=s.card||0; wrap.querySelector('#sale_bank').value=s.bank||0; wrap.querySelector('#sale_fin').value=s.finance||0;
       wrap.querySelector('#sale_partex').value=s.partex||''; wrap.querySelector('#sale_pxReg').value=s.pxReg||''; wrap.querySelector('#sale_pxMake').value=s.pxMake||''; wrap.querySelector('#sale_pxModel').value=s.pxModel||''; wrap.querySelector('#sale_pxAllowance').value=s.pxAllowance||0;
-      wrap.querySelector('#sale_finCo').value=s.financeCompany||''; wrap.querySelector('#sale_agree').value=s.agreement||''; wrap.querySelector('#sale_deliver').value=s.deliverTo||''; updateWarn();
+      wrap.querySelector('#sale_finCo').value=s.financeCompany||''; wrap.querySelector('#sale_agree').value=s.agreement||''; wrap.querySelector('#sale_deliver').value=s.deliverTo||''; wrap.querySelector('#sale_keys').value=s.keys||''; wrap.querySelector('#sale_mot').value=s.mot||''; wrap.querySelector('#sale_sh').value=s.serviceHistory||''; wrap.querySelector('#sale_invNo').value=s.invNo||''; updateWarn();
     } else if(b.dataset.act==='inv'){ printInvoice(s.id); } else if(b.dataset.act==='proforma'){ printFinanceProforma(s.id); }
   });
 
   wrap.querySelector('#sale_add').onclick=()=>{ if(!canAction('add')) return alert('No permission'); const regInput=(wrap.querySelector('#sale_reg').value||'').toUpperCase().trim(); const vid=findVehicleIdByReg(regInput); if(!vid) return alert('Enter a valid REG (use the suggestions).');
     const price=Number(wrap.querySelector('#sale_price').value||0);
-    const s={ id:editId||uid(), vehicleId:vid, date:wrap.querySelector('#sale_date').value, firstReg:wrap.querySelector('#sale_firstReg').value, buyer:wrap.querySelector('#sale_buyer').value.trim(), address:wrap.querySelector('#sale_addr').value.trim(),
-      phone:wrap.querySelector('#sale_phone').value.trim(), email:wrap.querySelector('#sale_email').value.trim(), mileage:Number(wrap.querySelector('#sale_mileage').value||0), salePrice:price, deposit:Number(wrap.querySelector('#sale_dep').value||0),
-      cash:Number(wrap.querySelector('#sale_cash').value||0), card:Number(wrap.querySelector('#sale_card').value||0), bank:Number(wrap.querySelector('#sale_bank').value||0), finance:Number(wrap.querySelector('#sale_fin').value||0),
-      partex:wrap.querySelector('#sale_partex').value.trim(), pxReg:(wrap.querySelector('#sale_pxReg').value||'').trim().toUpperCase(), pxMake:wrap.querySelector('#sale_pxMake').value.trim(), pxModel:wrap.querySelector('#sale_pxModel').value.trim(), pxAllowance:Number(wrap.querySelector('#sale_pxAllowance').value||0),
-      financeCompany:wrap.querySelector('#sale_finCo').value.trim(), agreement:wrap.querySelector('#sale_agree').value.trim(), deliverTo:wrap.querySelector('#sale_deliver').value.trim(), invNo:(Date.now()+'').slice(-6)};
+    const s={ id:editId||uid(), vehicleId:vid, date:wrap.querySelector('#sale_date').value,
+      firstReg:wrap.querySelector('#sale_firstReg').value,
+      buyer:wrap.querySelector('#sale_buyer').value.trim(),
+      address:wrap.querySelector('#sale_addr').value.trim(),
+      phone:wrap.querySelector('#sale_phone').value.trim(),
+      email:wrap.querySelector('#sale_email').value.trim(),
+      mileage:Number(wrap.querySelector('#sale_mileage').value||0),
+      salePrice:price,
+      deposit:Number(wrap.querySelector('#sale_dep').value||0),
+      cash:Number(wrap.querySelector('#sale_cash').value||0),
+      card:Number(wrap.querySelector('#sale_card').value||0),
+      bank:Number(wrap.querySelector('#sale_bank').value||0),
+      finance:Number(wrap.querySelector('#sale_fin').value||0),
+      partex:wrap.querySelector('#sale_partex').value.trim(),
+      pxReg:(wrap.querySelector('#sale_pxReg').value||'').trim().toUpperCase(),
+      pxMake:wrap.querySelector('#sale_pxMake').value.trim(),
+      pxModel:wrap.querySelector('#sale_pxModel').value.trim(),
+      pxAllowance:Number(wrap.querySelector('#sale_pxAllowance').value||0),
+      financeCompany:wrap.querySelector('#sale_finCo').value.trim(),
+      agreement:wrap.querySelector('#sale_agree').value.trim(),
+      deliverTo:wrap.querySelector('#sale_deliver').value.trim(),
+      keys:wrap.querySelector('#sale_keys').value.trim(),
+      mot:wrap.querySelector('#sale_mot').value.trim(),
+      serviceHistory:wrap.querySelector('#sale_sh').value.trim(),
+      invNo:(wrap.querySelector('#sale_invNo').value.trim()||(Date.now()+'').slice(-6))};
     const sumBreak=s.deposit+s.cash+s.card+s.bank+s.finance+s.pxAllowance;
     if(sumBreak!==s.salePrice){ if(!confirm('Payments + PX do not equal sale price. Continue?')) return; }
     if(editId){ 
@@ -1737,9 +1762,14 @@ function printPurchaseInvoice(purchaseId){
     <div style="margin-top:6px"><b>${co.name||'Star Cars London Ltd'}</b><br>${co.address||''}<br>P: ${co.phone||''} ${co.email||''}<br>COMPANY #: ${co.companyNumber||''} • VAT #: ${co.vatNumber||''}</div>`;
 
   const html=`<!doctype html><html><head><meta charset="utf-8"><title>Purchase Invoice</title>
-  <style>@page{size:A4;margin:10mm 10mm}body{font-family:Arial;color:#111;font-size:${fontPx}px} .h{display:flex;justify-content:space-between;align-items:flex-start;border-bottom:2px solid #000;padding-bottom:6px;margin-bottom:6px}
+  <style>@page{size:A4;margin:10mm 10mm}
+  body{font-family:Arial;color:#111;font-size:${fontPx}px}
+  .h{display:flex;justify-content:space-between;align-items:flex-start;border-bottom:2px solid #000;padding-bottom:6px;margin-bottom:6px}
   table{width:100%;border-collapse:collapse}th,td{border:1px solid #000;padding:6px 8px;font-size:${fontPx}px;vertical-align:top}th{background:#f5f5f5;text-align:left}
-  .terms{font-size:${Math.max(11,fontPx)}px;line-height:1.35} .tight td{padding:4px 6px}</style></head><body>
+  .terms{font-size:${Math.max(11,fontPx)}px;line-height:1.35} .tight td{padding:4px 6px}
+  .no-print{margin:8px 0}
+  @media print{.no-print{display:none !important}}
+  </style></head><body>
   <button class="no-print" onclick="window.print()" style="margin:8px 0">Print / Save as PDF</button>
   ${headerHTML}
   <table class="tight">
@@ -2039,21 +2069,32 @@ function viewInvestors(){ if(!canTab('Investors')) return document.createElement
 function price(n){ return '£'+Number(n||0).toFixed(2); }
 function invoiceHeaderHTML(title, refNo, date){
   const co=db.company||{};
-  const logo = (co.logo||'').trim() ? `<img src="${co.logo}" style="max-width:${Number(co.logoMaxW||140)}px;max-height:${Number(co.logoMaxH||80)}px;object-fit:contain">` : '';
+  const logo = (co.logo||'').trim()
+    ? `<img src="${co.logo}" style="max-width:${Number(co.logoMaxW||140)}px;max-height:${Number(co.logoMaxH||80)}px;object-fit:contain">`
+    : '';
+  const now = new Date();
+  const timeStr = now.toLocaleTimeString('en-GB',{hour:'2-digit',minute:'2-digit'});
   return `<div class="h"><div>${logo}</div>
-    <div style="text-align:right"><h2 style="margin:0">${title}</h2><div>Ref/Inv #: ${refNo||''}</div><div>Date: ${ddmmyyyy(date||'')}</div></div></div>
+    <div style="text-align:right"><h2 style="margin:0">${title}</h2><div>Ref/Inv #: ${refNo||''}</div><div>Date: ${ddmmyyyy(date||'')}</div><div>Time: ${timeStr}</div></div></div>
     <div style="margin-top:6px"><b>${co.name||'Star Cars London Ltd'}</b><br>${co.address||''}<br>P: ${co.phone||''} ${co.email||''}<br>COMPANY #: ${co.companyNumber||''} • VAT #: ${co.vatNumber||''}</div>`;
 }
+
 function printInvoice(saleId){
   const s=db.sales.find(x=>x.id===saleId); if(!s) return; const v=db.vehicles.find(x=>x.id===s.vehicleId)||{}; const co=db.company||{}; const fontPx=Number(co.invoiceFontPx||12);
   const html=`<!doctype html><html><head><meta charset="utf-8"><title>Invoice</title>
-  <style>@page{size:A4;margin:10mm 10mm}body{font-family:Arial;color:#111;font-size:${fontPx}px} .h{display:flex;justify-content:space-between;align-items:flex-start;border-bottom:2px solid #000;padding-bottom:6px;margin-bottom:6px}
+  <style>@page{size:A4;margin:10mm 10mm}
+  body{font-family:Arial;color:#111;font-size:${fontPx}px}
+  .h{display:flex;justify-content:space-between;align-items:flex-start;border-bottom:2px solid #000;padding-bottom:6px;margin-bottom:6px}
   table{width:100%;border-collapse:collapse}th,td{border:1px solid #000;padding:6px 8px;font-size:${fontPx}px;vertical-align:top}th{background:#f5f5f5;text-align:left}
-  .terms{font-size:${Math.max(11,fontPx)}px;line-height:1.35} .tight td{padding:4px 6px}</style></head><body>
+  .terms{font-size:${Math.max(11,fontPx)}px;line-height:1.35} .tight td{padding:4px 6px}
+  .no-print{margin:8px 0}
+  @media print{.no-print{display:none !important}}
+  </style></head><body>
   <button class="no-print" onclick="window.print()" style="margin:8px 0">Print / Save as PDF</button>
   ${invoiceHeaderHTML('SALES INVOICE', s.invNo, s.date)}
   <table class="tight"><tr><th>Customer</th><td>${s.buyer||''}<br>${s.address||''}<br>${s.phone||''} ${s.email||''}</td></tr>
-  <tr><th>Vehicle</th><td><b>${v.make||''} ${v.model||''}</b> — ${v.colour||''}<br>REG: ${v.reg||''} &nbsp; VIN: ${v.vin||''}<br>Mileage: ${(s.mileage||v.mileage||'')} &nbsp; First Reg: ${ddmmyyyy(s.firstReg||'')}</td></tr></table>
+  <tr><th>Vehicle</th><td><b>${v.make||''} ${v.model||''}</b><br>Colour: ${v.colour||''}<br>REG: ${v.reg||''} &nbsp; VIN: ${v.vin||''}<br>Mileage: ${(s.mileage||v.mileage||'')} &nbsp; First Reg: ${ddmmyyyy(s.firstReg||'')}</td></tr>
+  <tr><th>Keys / MOT / History</th><td>Keys: ${s.keys||'N/A'} &nbsp; MOT Exp: ${s.mot||'N/A'} &nbsp; Service History: ${s.serviceHistory||'N/A'}</td></tr></table>
   <h3>Payment</h3><table class="tight"><tr><th>Cash Price</th><td>${price(s.salePrice)}</td></tr><tr><th>Deposit</th><td>${price(s.deposit)}</td></tr><tr><th>Cash</th><td>${price(s.cash)}</td></tr><tr><th>Card</th><td>${price(s.card)}</td></tr><tr><th>Bank Transfer</th><td>${price(s.bank)}</td></tr><tr><th>Finance</th><td>${price(s.finance)}</td></tr>
   <tr><th>Part-ex Allowance</th><td>${price(s.pxAllowance)}</td></tr><tr><th>Part-ex Details</th><td>${(s.partex||'')+(s.pxReg?(' • '+s.pxReg+' '+(s.pxMake||'')+' '+(s.pxModel||'')):'')}</td></tr></table>
   <p class="terms"><b>Terms:</b><br>${String(co.terms||'').replace(/\n/g,'<br>')}</p>
@@ -2070,7 +2111,8 @@ function printFinanceProforma(saleId){
   ${invoiceHeaderHTML('PROFORMA INVOICE — FINANCE', s.invNo, s.date)}
   <table class="tight"><tr><th>Finance Company</th><td>${s.financeCompany||''}<br>Agreement: ${s.agreement||''}</td></tr><tr><th>Deliver To</th><td>${(s.deliverTo||'').replace(/\n/g,'<br>')}</td></tr></table>
   <table class="tight"><tr><th>Customer</th><td>${s.buyer||''}<br>${s.address||''}<br>${s.phone||''} ${s.email||''}</td></tr>
-  <tr><th>Vehicle</th><td><b>${v.make||''} ${v.model||''}</b> — ${v.colour||''}<br>REG: ${v.reg||''} &nbsp; VIN: ${v.vin||''}<br>Mileage: ${(s.mileage||v.mileage||'')} &nbsp; First Reg: ${ddmmyyyy(s.firstReg||'')}</td></tr></table>
+  <tr><th>Vehicle</th><td><b>${v.make||''} ${v.model||''}</b><br>Colour: ${v.colour||''}<br>REG: ${v.reg||''} &nbsp; VIN: ${v.vin||''}<br>Mileage: ${(s.mileage||v.mileage||'')} &nbsp; First Reg: ${ddmmyyyy(s.firstReg||'')}</td></tr>
+  <tr><th>Keys / MOT / History</th><td>Keys: ${s.keys||'N/A'} &nbsp; MOT Exp: ${s.mot||'N/A'} &nbsp; Service History: ${s.serviceHistory||'N/A'}</td></tr></table>
   <h3>Payment</h3><table class="tight"><tr><th>Cash Price</th><td>${price(s.salePrice)}</td></tr><tr><th>Deposit</th><td>${price(s.deposit)}</td></tr><tr><th>Cash</th><td>${price(s.cash)}</td></tr><tr><th>Card</th><td>${price(s.card)}</td></tr><tr><th>Bank Transfer</th><td>${price(s.bank)}</td></tr><tr><th>Finance</th><td>${price(s.finance)}</td></tr><tr><th>Part-ex Allowance</th><td>${price(s.pxAllowance)}</td></tr></table>
   <p class="terms"><b>Note:</b> Proforma for finance completion only. Vehicle remains property of dealer until cleared funds and executed agreement.</p>
   </body></html>`;
@@ -2129,21 +2171,21 @@ function viewReports(){
 
       // Mgmt fees only if car made a profit
       const mgmtFlat = (isInvestor && gross > 0) ? 175 : 0;
-      const mgmtPct  = (isInvestor && gross > 0) ? (0.20 * gross) : 0;
+      const mgmtBase = Math.max(0, gross - mgmtFlat);
+      const mgmtPct  = (isInvestor && gross > 0) ? (0.20 * mgmtBase) : 0;
 
       let investorShare = 0;
       let afterInvestor = gross;
 
       if (isInvestor && gross > 0) {
-        // Step 1: gross - £175 - 20%
-        const base = Math.max(0, gross - mgmtFlat - mgmtPct);
+        // Step 1: subtract £175 (mgmtFlat) and 20% of remaining (mgmtPct)
+        const baseAfterFees = Math.max(0, gross - mgmtFlat - mgmtPct);
 
-        // Step 2: investor gets 30% of what's left
-        investorShare = 0.30 * base;
+        // Step 2: investor gets 30% of the remaining
+        investorShare = 0.30 * baseAfterFees;
 
-        // Step 3: remainder for directors pot from this car
-        afterInvestor = Math.max(0, base - investorShare);
-        // equivalent: gross - mgmtFlat - mgmtPct - investorShare
+        // Step 3: remainder from this car for directors pot (before showroom / post-expenses)
+        afterInvestor = Math.max(0, baseAfterFees - investorShare);
       } else {
         // Dealer-owned car: all gross goes to directors pot (before showroom / post-expenses)
         afterInvestor = gross;
