--- a/index.html
+++ b/index.html
@@ -2121,25 +2121,36 @@ function viewCredit(){
 
 /* ========= Credit Invoice Printing ========= */
 function printCreditInvoice(creditId){
-  const cr=db.credits.find(x=>x.id===creditId); 
-  if(!cr) return; 
-  
-  const co=db.company||{}; 
-  const fontPx=Number(co.invoiceFontPx||12);
-  
+  const cr = db.credits.find(x => x.id === creditId);
+  if (!cr) return;
+
+  const co = db.company || {};
+  const fontPx  = Number(co.invoiceFontPx || 12);
+  const termsPx = Number(co.termsFontPx || 10);
+
   const title = cr.type === 'credit_note' ? 'CREDIT NOTE' : 'REFUND RECEIPT';
   const refNo = 'CR' + (cr.id || '').slice(-6).toUpperCase();
-  
-  const logo = (co.logo||'').trim() ? `<img src="${co.logo}" style="max-width:${Number(co.logoMaxW||140)}px;max-height:${Number(co.logoMaxH||80)}px;object-fit:contain">` : '';
-  
+
+  const logo = (co.logo||'').trim()
+    ? `<img src="${co.logo}" style="max-width:${Number(co.logoMaxW||140)}px;max-height:${Number(co.logoMaxH||80)}px;object-fit:contain">`
+    : '';
+
   const headerHTML = `<div class="h"><div>${logo}</div>
     <div style="text-align:right"><h2 style="margin:0">${title}</h2><div>Ref #: ${refNo}</div><div>Date: ${ddmmyyyy(cr.date||'')}</div></div></div>
     <div style="margin-top:6px"><b>${co.name||'Star Cars London Ltd'}</b><br>${co.address||''}<br>P: ${co.phone||''} ${co.email||''}<br>COMPANY #: ${co.companyNumber||''} • VAT #: ${co.vatNumber||''}</div>`;
 
-  const html=`<!doctype html><html><head><meta charset="utf-8"><title>${title}</title>
-  <style>@page{size:A4;margin:10mm 10mm}body{font-family:Arial;color:#111;font-size:${fontPx}px} .h{display:flex;justify-content:between;align-items:flex-start;border-bottom:2px solid #000;padding-bottom:6px;margin-bottom:6px}
-  table{width:100%;border-collapse:collapse}th,td{border:1px solid #000;padding:6px 8px;font-size:${fontPx}px;vertical-align:top}th{background:#f5f5f5;text-align:left}
-  .terms{font-size:${Math.max(11,fontPx)}px;line-height:1.35} .tight td{padding:4px 6px} .negative{color:#d00;font-weight:bold}</style></head><body>
+  const html = `<!doctype html><html><head><meta charset="utf-8"><title>${title}</title>
+  <style>
+    @page{size:A4;margin:10mm 10mm}
+    body{font-family:Arial;color:#111;font-size:${fontPx}px}
+    .h{display:flex;justify-content:between;align-items:flex-start;border-bottom:2px solid #000;padding-bottom:6px;margin-bottom:6px}
+    table{width:100%;border-collapse:collapse}
+    th,td{border:1px solid #000;padding:6px 8px;font-size:${fontPx}px;vertical-align:top}
+    th{background:#f5f5f5;text-align:left}
+    .terms{font-size:${Math.max(8,termsPx)}px;line-height:1.35}
+    .tight td{padding:4px 6px}
+    .negative{color:#d00;font-weight:bold}
+  </style></head><body>
   <button class="no-print" onclick="window.print()" style="margin:8px 0">Print / Save as PDF</button>
   ${headerHTML}
   <table class="tight">
@@ -2155,7 +2166,7 @@ function printCreditInvoice(creditId){
   </table>
   <p class="terms">
     <b>Terms:</b><br>
-    ${cr.type === 'credit_note' 
+    ${cr.type === 'credit_note'
       ? 'This credit note may be used against future purchases with ' + (co.name || 'Star Cars London Ltd') + '. Valid for 12 months from date of issue.'
       : 'This refund has been processed as indicated above. Please allow 3-5 working days for bank transfers to clear.'}
   </p>
@@ -2164,7 +2175,7 @@ function printCreditInvoice(creditId){
     Issued by: ${co.name || 'Star Cars London Ltd'} • ${ddmmyyyy(cr.date)} • Ref: ${refNo}
   </p>
   </body></html>`;
-  
+
   openPrintable(html);
 }
 
@@ -2369,28 +2380,35 @@ function viewPurchaseInvoice(){
 
 /* ========= Purchase Invoice Printing ========= */
 function printPurchaseInvoice(purchaseId){
-  const pi=db.purchaseInvoices.find(x=>x.id===purchaseId); 
-  if(!pi) return; 
-  
-  const co=db.company||{}; 
-  const fontPx=Number(co.invoiceFontPx||12);
-  
+  const pi = db.purchaseInvoices.find(x => x.id === purchaseId);
+  if (!pi) return;
+
+  const co = db.company || {};
+  const fontPx  = Number(co.invoiceFontPx || 12);
+  const termsPx = Number(co.termsFontPx || 10);
+
   const refNo = 'PI' + (pi.id || '').slice(-6).toUpperCase();
-  
-  const logo = (co.logo||'').trim() ? `<img src="${co.logo}" style="max-width:${Number(co.logoMaxW||140)}px;max-height:${Number(co.logoMaxH||80)}px;object-fit:contain">` : '';
-  
+
+  const logo = (co.logo||'').trim()
+    ? `<img src="${co.logo}" style="max-width:${Number(co.logoMaxW||140)}px;max-height:${Number(co.logoMaxH||80)}px;object-fit:contain">`
+    : '';
+
   const headerHTML = `<div class="h"><div>${logo}</div>
     <div style="text-align:right"><h2 style="margin:0">PURCHASE INVOICE</h2><div>Ref #: ${refNo}</div><div>Date: ${ddmmyyyy(pi.date||'')}</div></div></div>
     <div style="margin-top:6px"><b>${co.name||'Star Cars London Ltd'}</b><br>${co.address||''}<br>P: ${co.phone||''} ${co.email||''}<br>COMPANY #: ${co.companyNumber||''} • VAT #: ${co.vatNumber||''}</div>`;
 
-  const html=`<!doctype html><html><head><meta charset="utf-8"><title>Purchase Invoice</title>
-  <style>@page{size:A4;margin:10mm 10mm}
-  body{font-family:Arial;color:#111;font-size:${fontPx}px}
-  .h{display:flex;justify-content:space-between;align-items:flex-start;border-bottom:2px solid #000;padding-bottom:6px;margin-bottom:6px}
-  table{width:100%;border-collapse:collapse}th,td{border:1px solid #000;padding:6px 8px;font-size:${fontPx}px;vertical-align:top}th{background:#f5f5f5;text-align:left}
-  .terms{font-size:${Math.max(11,fontPx)}px;line-height:1.35} .tight td{padding:4px 6px}
-  .no-print{margin:8px 0}
-  @media print{.no-print{display:none !important}}
+  const html = `<!doctype html><html><head><meta charset="utf-8"><title>Purchase Invoice</title>
+  <style>
+    @page{size:A4;margin:10mm 10mm}
+    body{font-family:Arial;color:#111;font-size:${fontPx}px}
+    .h{display:flex;justify-content:space-between;align-items:flex-start;border-bottom:2px solid #000;padding-bottom:6px;margin-bottom:6px}
+    table{width:100%;border-collapse:collapse}
+    th,td{border:1px solid #000;padding:6px 8px;font-size:${fontPx}px;vertical-align:top}
+    th{background:#f5f5f5;text-align:left}
+    .terms{font-size:${Math.max(8,termsPx)}px;line-height:1.35}
+    .tight td{padding:4px 6px}
+    .no-print{margin:8px 0}
+    @media print{.no-print{display:none !important}}
   </style></head><body>
   <button class="no-print" onclick="window.print()" style="margin:8px 0">Print / Save as PDF</button>
   ${headerHTML}
@@ -2399,7 +2417,7 @@ function printPurchaseInvoice(purchaseId){
     <tr><th>Invoice Number</th><td>${pi.invoiceNo||refNo}</td></tr>
     <tr><th>Payment Method</th><td>${pi.method === 'cash' ? 'Cash' : 'Bank Transfer'}</td></tr>
   </table>
-  
+
   <h3>Vehicle Details</h3>
   <table class="tight">
     <tr><th>Registration</th><td>${pi.reg||''}</td></tr>
@@ -2408,25 +2426,25 @@ function printPurchaseInvoice(purchaseId){
     <tr><th>VIN</th><td>${pi.vin||''}</td></tr>
     <tr><th>Mileage</th><td>${pi.mileage||''}</td></tr>
   </table>
-  
+
   <h3>Purchase Details</h3>
   <table class="tight">
     <tr><th>Purchase Amount</th><td class="right">${fmtMoney(pi.amount)}</td></tr>
   </table>
-  
+
   <div class="terms">
     <b>Purchase Terms:</b><br>
     Vehicle purchased as seen. Payment made as indicated above. All relevant documentation and keys exchanged at time of purchase.
     ${pi.notes ? `<br><br><b>Additional Notes:</b><br>${pi.notes}` : ''}
   </div>
-  
+
   <p>Seller signature: _______________________ &nbsp;&nbsp; Buyer signature: _______________________</p>
-  
+
   <p style="margin-top:20px;font-size:${Math.max(10,fontPx-2)}px;color:#666">
     Issued by: ${co.name || 'Star Cars London Ltd'} • ${ddmmyyyy(pi.date)} • Ref: ${refNo}
   </p>
   </body></html>`;
-  
+
   openPrintable(html);
 }
 
@@ -2702,60 +2720,111 @@ function invoiceHeaderHTML(title, refNo, date){
 }
 
 function printInvoice(saleId){
-  const s=db.sales.find(x=>x.id===saleId); if(!s) return; const v=db.vehicles.find(x=>x.id===s.vehicleId)||{}; const co=db.company||{}; const fontPx=Number(co.invoiceFontPx||12);
-  const html=`<!doctype html><html><head><meta charset="utf-8"><title>Invoice</title>
-  <style>@page{size:A4;margin:10mm 10mm}
-  body{font-family:Arial;color:#111;font-size:${fontPx}px}
-  .h{display:flex;justify-content:space-between;align-items:flex-start;border-bottom:2px solid #000;padding-bottom:6px;margin-bottom:6px}
-  table{width:100%;border-collapse:collapse}th,td{border:1px solid #000;padding:6px 8px;font-size:${fontPx}px;vertical-align:top}th{background:#f5f5f5;text-align:left}
-  .terms{font-size:${Math.max(11,fontPx)}px;line-height:1.35} .tight td{padding:4px 6px}
-  .no-print{margin:8px 0}
-  @media print{.no-print{display:none !important}}
+  const s = db.sales.find(x => x.id === saleId);
+  if (!s) return;
+
+  const v  = db.vehicles.find(x => x.id === s.vehicleId) || {};
+  const co = db.company || {};
+  const fontPx  = Number(co.invoiceFontPx || 12);
+  const termsPx = Number(co.termsFontPx || 10);
+
+  const html = `<!doctype html><html><head><meta charset="utf-8"><title>Invoice</title>
+  <style>
+    @page{size:A4;margin:10mm 10mm}
+    body{font-family:Arial;color:#111;font-size:${fontPx}px}
+    .h{display:flex;justify-content:space-between;align-items:flex-start;border-bottom:2px solid #000;padding-bottom:6px;margin-bottom:6px}
+    table{width:100%;border-collapse:collapse}
+    th,td{border:1px solid #000;padding:6px 8px;font-size:${fontPx}px;vertical-align:top}
+    th{background:#f5f5f5;text-align:left}
+    .terms{font-size:${Math.max(8,termsPx)}px;line-height:1.35}
+    .tight td{padding:4px 6px}
+    .no-print{margin:8px 0}
+    @media print{.no-print{display:none !important}}
   </style></head><body>
   <button class="no-print" onclick="window.print()" style="margin:8px 0">Print / Save as PDF</button>
   ${invoiceHeaderHTML('SALES INVOICE', s.invNo, s.date)}
-  <table class="tight"><tr><th>Customer</th><td>${s.buyer||''}<br>${s.address||''}<br>${s.phone||''} ${s.email||''}</td></tr>
-  <tr><th>Vehicle</th><td><b>${v.make||''} ${v.model||''}</b><br>Colour: ${v.colour||''}<br>REG: ${v.reg||''} &nbsp; VIN: ${v.vin||''}<br>Mileage: ${(s.mileage||v.mileage||'')} &nbsp; First Reg: ${ddmmyyyy(s.firstReg||'')}</td></tr>
-  <tr><th>Keys / MOT / History</th><td>Keys: ${s.keys||'N/A'} &nbsp; MOT Exp: ${s.mot||'N/A'} &nbsp; Service History: ${s.serviceHistory||'N/A'}</td></tr></table>
-  <h3>Payment</h3><table class="tight"><tr><th>Cash Price</th><td>${price(s.salePrice)}</td></tr><tr><th>Deposit</th><td>${price(s.deposit)}</td></tr><tr><th>Cash</th><td>${price(s.cash)}</td></tr><tr><th>Card</th><td>${price(s.card)}</td></tr><tr><th>Bank Transfer</th><td>${price(s.bank)}</td></tr><tr><th>Finance</th><td>${price(s.finance)}</td></tr>
-  <tr><th>Part-ex Allowance</th><td>${price(s.pxAllowance)}</td></tr><tr><th>Part-ex Details</th><td>${(s.partex||'')+(s.pxReg?(' • '+s.pxReg+' '+(s.pxMake||'')+' '+(s.pxModel||'')):'')}</td></tr></table>
+  <table class="tight">
+    <tr><th>Customer</th><td>${s.buyer||''}<br>${s.address||''}<br>${s.phone||''} ${s.email||''}</td></tr>
+    <tr><th>Vehicle</th><td><b>${v.make||''} ${v.model||''}</b><br>Colour: ${v.colour||''}<br>REG: ${v.reg||''} &nbsp; VIN: ${v.vin||''}<br>Mileage: ${(s.mileage||v.mileage||'')} &nbsp; First Reg: ${ddmmyyyy(s.firstReg||'')}</td></tr>
+    <tr><th>Keys / MOT / History</th><td>Keys: ${s.keys||'N/A'} &nbsp; MOT Exp: ${s.mot||'N/A'} &nbsp; Service History: ${s.serviceHistory||'N/A'}</td></tr>
+  </table>
+  <h3>Payment</h3>
+  <table class="tight">
+    <tr><th>Cash Price</th><td>${price(s.salePrice)}</td></tr>
+    <tr><th>Deposit</th><td>${price(s.deposit)}</td></tr>
+    <tr><th>Cash</th><td>${price(s.cash)}</td></tr>
+    <tr><th>Card</th><td>${price(s.card)}</td></tr>
+    <tr><th>Bank Transfer</th><td>${price(s.bank)}</td></tr>
+    <tr><th>Finance</th><td>${price(s.finance)}</td></tr>
+    <tr><th>Part-ex Allowance</th><td>${price(s.pxAllowance)}</td></tr>
+    <tr><th>Part-ex Details</th><td>${(s.partex||'') + (s.pxReg ? (' • '+s.pxReg+' '+(s.pxMake||'')+' '+(s.pxModel||'')) : '')}</td></tr>
+  </table>
   <p class="terms"><b>Terms:</b><br>${String(co.terms||'').replace(/\n/g,'<br>')}</p>
-  <p>Customer signature: _______________________ &nbsp;&nbsp; Dealer signature: _______________________</p></body></html>`;
+  <div style="margin-top: 30px;">
+    <p>Customer Date: _______________________ &nbsp;&nbsp; Customer Signature: _______________________</p><br><br>
+    <p>Dealer Date: _______________________ &nbsp;&nbsp; Dealer Signature: _______________________</p>
+  </div>
+  </body></html>`;
+
   openPrintable(html);
 }
 
 function printFinanceProforma(saleId){
-  const s=db.sales.find(x=>x.id===saleId); if(!s) return; 
-  const v=db.vehicles.find(x=>x.id===s.vehicleId)||{}; 
-  const co=db.company||{}; 
-  const fontPx=Number(co.invoiceFontPx||12);
-  
+  const s = db.sales.find(x => x.id === saleId);
+  if (!s) return;
+
+  const v  = db.vehicles.find(x => x.id === s.vehicleId) || {};
+  const co = db.company || {};
+  const fontPx  = Number(co.invoiceFontPx || 12);
+  const termsPx = Number(co.termsFontPx || 10);
+
   const logo = (co.logo||'').trim()
     ? `<img src="${co.logo}" style="max-width:${Number(co.logoMaxW||140)}px;max-height:${Number(co.logoMaxH||80)}px;object-fit:contain">`
     : '';
-  const now = new Date();
+  const now    = new Date();
   const timeStr = now.toLocaleTimeString('en-GB',{hour:'2-digit',minute:'2-digit'});
-  
+
   const headerHTML = `<div class="h"><div>${logo}</div>
     <div style="text-align:right"><h2 style="margin:0">PROFORMA INVOICE — FINANCE</h2><div>Invoice #: ${s.invNo||''}</div><div>Date: ${ddmmyyyy(s.date||'')}</div><div>Time: ${timeStr}</div></div></div>
     <div style="margin-top:6px"><b>${co.name||'Star Cars London Ltd'}</b><br>${co.address||''}<br>P: ${co.phone||''} ${co.email||''}<br>COMPANY #: ${co.companyNumber||''} • VAT #: ${co.vatNumber||''}</div>`;
-  
-  const html=`<!doctype html><html><head><meta charset="utf-8"><title>Finance Proforma</title>
-  <style>@page{size:A4;margin:10mm 10mm}body{font-family:Arial;color:#111;font-size:${fontPx}px} .h{display:flex;justify-content:space-between;align-items:flex-start;border-bottom:2px solid #000;padding-bottom:6px;margin-bottom:6px}
-  table{width:100%;border-collapse:collapse}th,td{border:1px solid #000;padding:6px 8px;font-size:${fontPx}px;vertical-align:top}th{background:#f5f5f5;text-align:left}
-  .terms{font-size:${Math.max(11,fontPx)}px;line-height:1.35} .tight td{padding:4px 6px}
-  .print-btn-proforma{margin:8px 0}
-  @media print{.print-btn-proforma{display:none !important}}
+
+  const html = `<!doctype html><html><head><meta charset="utf-8"><title>Finance Proforma</title>
+  <style>
+    @page{size:A4;margin:10mm 10mm}
+    body{font-family:Arial;color:#111;font-size:${fontPx}px}
+    .h{display:flex;justify-content:space-between;align-items:flex-start;border-bottom:2px solid #000;padding-bottom:6px;margin-bottom:6px}
+    table{width:100%;border-collapse:collapse}
+    th,td{border:1px solid #000;padding:6px 8px;font-size:${fontPx}px;vertical-align:top}
+    th{background:#f5f5f5;text-align:left}
+    .terms{font-size:${Math.max(8,termsPx)}px;line-height:1.35}
+    .tight td{padding:4px 6px}
+    .print-btn-proforma{margin:8px 0}
+    @media print{.print-btn-proforma{display:none !important}}
   </style></head><body>
   <button class="print-btn-proforma" onclick="window.print()" style="margin:8px 0">Print / Save as PDF</button>
   ${headerHTML}
-  <table class="tight"><tr><th>Finance Company</th><td>${s.financeCompany||''}<br>Agreement: ${s.agreement||''}</td></tr><tr><th>Deliver To</th><td>${(s.deliverTo||'').replace(/\n/g,'<br>')}</td></tr></table>
-  <table class="tight"><tr><th>Customer</th><td>${s.buyer||''}<br>${s.address||''}<br>${s.phone||''} ${s.email||''}</td></tr>
-  <tr><th>Vehicle</th><td><b>${v.make||''} ${v.model||''}</b><br>Colour: ${v.colour||''}<br>REG: ${v.reg||''} &nbsp; VIN: ${v.vin||''}<br>Mileage: ${(s.mileage||v.mileage||'')} &nbsp; First Reg: ${ddmmyyyy(s.firstReg||'')}</td></tr>
-  <tr><th>Keys / MOT / History</th><td>Keys: ${s.keys||'N/A'} &nbsp; MOT Exp: ${s.mot||'N/A'} &nbsp; Service History: ${s.serviceHistory||'N/A'}</td></tr></table>
-  <h3>Payment</h3><table class="tight"><tr><th>Cash Price</th><td>${price(s.salePrice)}</td></tr><tr><th>Deposit</th><td>${price(s.deposit)}</td></tr><tr><th>Cash</th><td>${price(s.cash)}</td></tr><tr><th>Card</th><td>${price(s.card)}</td></tr><tr><th>Bank Transfer</th><td>${price(s.bank)}</td></tr><tr><th>Finance</th><td>${price(s.finance)}</td></tr><tr><th>Part-ex Allowance</th><td>${price(s.pxAllowance)}</td></tr></table>
+  <table class="tight">
+    <tr><th>Finance Company</th><td>${s.financeCompany||''}<br>Agreement: ${s.agreement||''}</td></tr>
+    <tr><th>Deliver To</th><td>${(s.deliverTo||'').replace(/\n/g,'<br>')}</td></tr>
+  </table>
+  <table class="tight">
+    <tr><th>Customer</th><td>${s.buyer||''}<br>${s.address||''}<br>${s.phone||''} ${s.email||''}</td></tr>
+    <tr><th>Vehicle</th><td><b>${v.make||''} ${v.model||''}</b><br>Colour: ${v.colour||''}<br>REG: ${v.reg||''} &nbsp; VIN: ${v.vin||''}<br>Mileage: ${(s.mileage||v.mileage||'')} &nbsp; First Reg: ${ddmmyyyy(s.firstReg||'')}</td></tr>
+    <tr><th>Keys / MOT / History</th><td>Keys: ${s.keys||'N/A'} &nbsp; MOT Exp: ${s.mot||'N/A'} &nbsp; Service History: ${s.serviceHistory||'N/A'}</td></tr>
+  </table>
+  <h3>Payment</h3>
+  <table class="tight">
+    <tr><th>Cash Price</th><td>${price(s.salePrice)}</td></tr>
+    <tr><th>Deposit</th><td>${price(s.deposit)}</td></tr>
+    <tr><th>Cash</th><td>${price(s.cash)}</td></tr>
+    <tr><th>Card</th><td>${price(s.card)}</td></tr>
+    <tr><th>Bank Transfer</th><td>${price(s.bank)}</td></tr>
+    <tr><th>Finance</th><td>${price(s.finance)}</td></tr>
+    <tr><th>Part-ex Allowance</th><td>${price(s.pxAllowance)}</td></tr>
+  </table>
   <p class="terms"><b>Note:</b> Proforma for finance completion only. Vehicle remains property of dealer until cleared funds and executed agreement.</p>
   </body></html>`;
+
   openPrintable(html);
 }
 
