--- a/index.html
+++ b/index.html
@@ -2761,7 +2761,7 @@ function printInvoice(saleId){
   </table>
   <p class="terms"><b>Terms:</b><br>${String(co.terms||'').replace(/\n/g,'<br>')}</p>
   <div style="margin-top: 30px;">
-    <p>Customer Date: _______________________ &nbsp;&nbsp; Customer Signature: _______________________</p><br><br>
+    <p>Customer Date: _______________________ &nbsp;&nbsp; Customer Signature: _______________________</p><br>
     <p>Dealer Date: _______________________ &nbsp;&nbsp; Dealer Signature: _______________________</p>
   </div>
   </body></html>`;
