--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ window.restoreJSONMerge = function () {
     <div id="logoBox">SC</div>
     <div>
       <div style="font-weight:900">Star Cars London Ltd</div>
-      <div class="small">Dealer Backoffice — v48 upgraded</div>
+      <div class="small">Dealer Backoffice </div>
     </div>
   </div>
   <div class="hdr-actions">
